# cookbook

./: README.md
examples/car-maker-identification/: Makefile  README.md  pyproject.toml
examples/car-maker-identification/configs/: eval_lfm_1.6B_raw_generation.yaml  eval_lfm_1.6B_structured_generation.yaml  eval_lfm_3B_checkpoint_100.yaml  eval_lfm_3B_checkpoint_1000.yaml  eval_lfm_3B_checkpoint_200.yaml  eval_lfm_3B_checkpoint_500.yaml  eval_lfm_3B_raw_generation.yaml  eval_lfm_3B_structured_generation.yaml  eval_lfm_450M_raw_generation.yaml  eval_lfm_450M_structured_generation.yaml  finetune_lfm_1.6B.yaml  finetune_lfm_3B.yaml  finetune_lfm_450M.yaml
examples/car-maker-identification/notebooks/: visualize_evals.ipynb
examples/car-maker-identification/notebooks/.ipynb_checkpoints/: visualize_evals-checkpoint.ipynb
examples/car-maker-identification/src/car_maker_identification/: __init__.py  batching.py  callbacks.py  config.py  data_preparation.py  evaluate.py  fine_tune.py  inference.py  loaders.py  modal_infra.py  output_types.py  paths.py  peft.py  report.py  utils.py
examples/lfm2-extract/: README.md
